--- a/views/pages/main.templ
+++ b/views/pages/main.templ
@@ -14,7 +14,7 @@ templ MainPage() {
 			<p id="daily-allowance">Current Daily Allowance: <b style="float: right;">Rp 75.000</b></p>
 			<!-- <p id="total-budget">Total Budget: <b style="float: right;">$2000</b></p> -->
 		</article>
-		<button type="submit" id="add-transaction-button" onclick="window.location.href='transaction.html'">✚ Add Transaction</button>
+		<button type="submit" id="add-transaction-button" onclick="window.location.href='/add'">✚ Add Transaction</button>
 		
 		<section class="date-navigation" style="display: flex; justify-content: space-between; align-items: center; gap: 10px;">
 			<button id="prev-day">&lt;</button>
