--- a/views/component/base.templ
+++ b/views/component/base.templ
@@ -12,6 +12,8 @@ templ Base() {
 				href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css"
 			/>
 			<link href="/static/main.css" rel="stylesheet"/>
+			<script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
+
 		</head>
 		<body>
 			<header>
