--- a/views/component/base.templ
+++ b/views/component/base.templ
@@ -13,7 +13,7 @@ templ Base() {
 			/>
 			<link href="/static/main.css" rel="stylesheet"/>
 			<script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
-
+			<script src="https://unpkg.com/alpinejs@3.14.3/dist/cdn.min.js" defer></script>
 		</head>
 		<body>
 			<header>
