--- a/views/pages/add_page.templ
+++ b/views/pages/add_page.templ
@@ -12,7 +12,7 @@ templ AddTransaction(csrfToken string, expenseCategory []string, incomeCategory 
 			<form id="add-expense" method="POST" action="/trx">
 				<input type="hidden" name="_csrf" value={ csrfToken }/>
 				<label for="description">What ?</label>
-				<input type="text" id="description" name="description" required autofocus onfocus="this.setSelectionRange(this.value.length, this.value.length);"/>
+				<input style="text-align: right;" type="text" id="description" name="description" required autofocus onfocus="this.setSelectionRange(this.value.length, this.value.length);"/>
 				<div style="display: flex; justify-content: space-between;">
 					<fieldset id="expense-category" style="flex: 1; margin-right: 10px;">
 						<legend>Expense:</legend>
