--- a/views/pages/main.templ
+++ b/views/pages/main.templ
@@ -4,9 +4,10 @@ import (
 	"bajetapp/views/component"
 	"bajetapp/model"
 	"strconv"
+	"cloud.google.com/go/civil"
 )
 
-templ MainPage(trxList []model.Transaction) {
+templ MainPage(currentDate civil.Date, trxList []model.Transaction) {
 	@component.Base() {
 		<article>
 			<h4>
@@ -23,13 +24,7 @@ templ MainPage(trxList []model.Transaction) {
 		<section class="date-navigation" style="display: flex; justify-content: space-between; align-items: center; gap: 10px;">
 			<button id="prev-day">&lt;</button>
 			<div style="flex-grow: 1; text-align: center;" id="current-date">
-				<input aria-label="Date" type="date" id="date-input" style="border: none; text-align: center; margin: 0;"/>
-				<script>
-                    document.addEventListener('DOMContentLoaded', (event) => {
-                        const today = new Date().toISOString().split('T')[0];
-                        document.getElementById('date-input').value = today;
-                    });
-                </script>
+				<input value={ currentDate.String() } aria-label="Date" type="date" id="date-input" style="border: none; text-align: center; margin: 0;"/>
 			</div>
 			<button id="next-day">&gt;</button>
 		</section>
@@ -42,6 +37,7 @@ templ MainPage(trxList []model.Transaction) {
 					<th style="text-align: center;">How Much</th>
 				</tr>
 			</thead>
+			<!-- go to another component -->
 			<tbody>
 					{{ totalAmount := 0 }}
 					for _, trx := range trxList {
@@ -52,19 +48,6 @@ templ MainPage(trxList []model.Transaction) {
 							<td style="text-align: center;">Rp { strconv.Itoa(trx.Amount) }</td>
 						</tr>
 					}
-				
-				// <tr>
-				// 	<td style="text-align: center;">17:30</td>
-				// 	<!-- <td></td> -->
-				// 	<td style="text-align: center;">🍽️ Makan Siang</td>
-				// 	<td style="text-align: center;">Rp 150.000</td>
-				// </tr>
-				// <tr>
-				// 	<td style="text-align: center;">17:10</td>
-				// 	<!-- <td>⛽️</td> -->
-				// 	<td style="text-align: center;">⛽️ Bensin Motor</td>
-				// 	<td style="text-align: center;">Rp 20.000</td>
-				// </tr>
 			</tbody>
 			<tfoot>
 				<tr>
@@ -72,6 +55,7 @@ templ MainPage(trxList []model.Transaction) {
 					<td style="text-align: center;">Rp { strconv.Itoa(totalAmount) }</td>
 				</tr>
 			</tfoot>
+			<!-- go to another component -->
 		</table>
 	}
 }
