--- a/views/pages/add_page.templ
+++ b/views/pages/add_page.templ
@@ -1,4 +1,3 @@
-
 package pages
 
 import (
@@ -9,7 +8,7 @@ import (
 templ AddTransaction(csrfToken string, expenseCategory []string, incomeCategory []string) {
 	@component.Base() {
 		<section class="add-expense">
-			<form id="add-expense" method="POST" action="/trx">
+			<form id="add-expense" method="POST" action="/trx" x-data="{ trx_amount: '', trx_amount_k: '', category: '' }" x-init="$watch('trx_amount_k', value => trx_amount = category.startsWith('radio-exp-') ? value * -1000 : value * 1000)">
 				<input type="hidden" name="_csrf" value={ csrfToken }/>
 				<label for="description">What ?</label>
 				<input style="text-align: center;" type="text" id="description" name="description" required autofocus onfocus="this.setSelectionRange(this.value.length, this.value.length);"/>
@@ -18,7 +17,7 @@ templ AddTransaction(csrfToken string, expenseCategory []string, incomeCategory 
 						<legend>Expense:</legend>
 						for idx,item:= range expenseCategory {
 							<label for={ "radio-exp-"+strconv.Itoa(idx) } >
-								<input type="radio" id={ "radio-exp-"+strconv.Itoa(idx) } name="category" value={ item }/>
+								<input type="radio" id={ "radio-exp-"+strconv.Itoa(idx) } name="category" value={ item } x-model="category"/>
 								{ item }
 							</label>
 						}
@@ -27,14 +26,14 @@ templ AddTransaction(csrfToken string, expenseCategory []string, incomeCategory 
 						<legend>Income:</legend>
 						for idx,item:= range incomeCategory {
 							<label for={ "radio-inc-"+strconv.Itoa(idx) } >
-								<input type="radio" id={ "radio-inc-"+strconv.Itoa(idx) } name="category" value={ item }/>
+								<input type="radio" id={ "radio-inc-"+strconv.Itoa(idx) } name="category" value={ item } x-model="category"/>
 								{ item }
 							</label>
 						}
 					</fieldset>
 				</div>
 				<label for="amount">How Much ?</label>
-				<fieldset role="group" x-data="{ trx_amount: '', trx_amount_k: '' }" x-init="$watch('trx_amount_k', value => trx_amount = value * 1000)">
+				<fieldset role="group">
 					<input
 						value="Rp"
 						value="Read-only"
@@ -50,7 +49,7 @@ templ AddTransaction(csrfToken string, expenseCategory []string, incomeCategory 
 						readonly
 						style="width: 15%;"
 					/>
-					<input hidden aria-hidden="true" x-model="trx_amount" type="text" id="amount" name="amount" readonly />
+					<input  aria-hidden="true" x-model="trx_amount" type="text" id="amount" name="amount" readonly />
 						
 				</fieldset>
 
@@ -61,53 +60,6 @@ templ AddTransaction(csrfToken string, expenseCategory []string, incomeCategory 
 				</div>
 
 				<button type="submit" id="submit_button">Add Expense</button>
-				<script>
-                    document.addEventListener('DOMContentLoaded', (event) => {
-                        const submitButton = document.getElementById('submit-button');
-                        const expenseNameInput = document.getElementById('expense-name');
-                        const expenseAmountInput = document.getElementById('expense-amount');
-                        const expenseDateInput = document.getElementById('transaction_at');
-
-                        const validateForm = () => {
-                            const expenseName = expenseNameInput.value.trim();
-                            const expenseAmount = parseFloat(expenseAmountInput.value.replace(/[^0-9.-]+/g,""));
-                            const expenseDate = new Date(expenseDateInput.value);
-
-                            if (expenseName && expenseAmount > 0 && !isNaN(expenseDate.getTime())) {
-                                submitButton.disabled = false;
-                            } else {
-                                submitButton.disabled = true;
-                            }
-                        };
-
-                        expenseNameInput.addEventListener('input', validateForm);
-                        expenseAmountInput.addEventListener('input', validateForm);
-                        expenseDateInput.addEventListener('input', validateForm);
-
-                        validateForm(); // Initial validation
-                    });
-                </script>
-				<script>
-                    document.addEventListener('DOMContentLoaded', (event) => {
-                        const submitButton = document.getElementById('submit-button');
-                        const expenseCategoryFieldset = document.getElementById('expense-category');
-                        const incomeCategoryFieldset = document.getElementById('income-category');
-                        
-                        const updateButtonLabel = () => {
-                            const selectedExpense = expenseCategoryFieldset.querySelector('input[name="radio"]:checked');
-                            const selectedIncome = incomeCategoryFieldset.querySelector('input[name="radio"]:checked');
-                            
-                            if (selectedIncome) {
-                                submitButton.textContent = 'Add Income';
-                            } else if (selectedExpense) {
-                                submitButton.textContent = 'Add Expense';
-                            }
-                        };
-
-                        expenseCategoryFieldset.addEventListener('change', updateButtonLabel);
-                        incomeCategoryFieldset.addEventListener('change', updateButtonLabel);
-                    });
-                </script>
 			</form>
 		</section>
 	}
