--- a/views/pages/main.templ
+++ b/views/pages/main.templ
@@ -39,9 +39,9 @@ templ MainPage(currentDate civil.Date, trxList []model.Transaction) {
 			</thead>
 			<!-- go to another component -->
 			<tbody>
-					{{ totalAmount := 0 }}
+				// {{ totalAmount := 0 }}					
 					for _, trx := range trxList {
-						{{ totalAmount += trx.Amount }}
+						// totalAmount += trx.Amount 
 						<tr>
 							<td style="text-align: center;">{ trx.TransactionAt.Format("15:04") }</td>
 							<td style="text-align: center;">{ string([]rune(trx.Category)[0])+" "+trx.Description }</td>
@@ -52,7 +52,7 @@ templ MainPage(currentDate civil.Date, trxList []model.Transaction) {
 			<tfoot>
 				<tr>
 					<th scope="row" colspan="2" style="text-align: center;">Total</th>
-					<td style="text-align: center;">Rp { strconv.Itoa(totalAmount) }</td>
+					<td style="text-align: center;">Rp </td>
 				</tr>
 			</tfoot>
 			<!-- go to another component -->
